--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="black.murasyou.app"
-    android:versionCode="2"
-    android:versionName="1.0.1">
+    android:versionCode="5"
+    android:versionName="1.1.0-b">
     <uses-sdk 
         android:minSdkVersion="8" 
         android:targetSdkVersion="21"/>
@@ -14,7 +14,8 @@
 		android:name=".CustomApplication">
 		<activity
             android:label="@string/app_name"
-            android:name=".FlameActivity" >
+            android:name=".FlameActivity"
+			android:enabled="true">
             <intent-filter >
 				<action android:name="android.intent.action.MAIN" />
 
@@ -33,6 +34,31 @@
 		<activity
             android:label="@string/app_name"
             android:name=".LawViewerActivity" >
+		</activity>
+		
+		<!--ActivityGroups-->
+		<activity
+            android:label="@string/app_name"
+            android:name=".PagerFlameActivity"
+			android:theme="@style/NoShadow"
+			android:enabled="false">
+            <intent-filter >
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+		<activity
+            android:label="@string/app_name"
+            android:name=".PagerFlameActivity$PagerCore" >
+		</activity>
+		<activity
+            android:label="@string/app_name"
+            android:name=".PagerFlameActivity$PagerCore$MenuActivity" >
+		</activity>
+		<activity
+            android:label="@string/app_name"
+            android:name=".MenuActivity" >
 		</activity>
     </application>
 </manifest>
