--- a/project.properties
+++ b/project.properties
@@ -11,3 +11,6 @@
 target=android-10
 
 android.library.reference.1=/storage/emulated/0/.aide/android-support/m2repository/com/android/support/support-v4/21.0.0/support-v4-21.0.0.aar
+#android.library.reference.1=/storage/emulated/0/.aide/android-support/m2repository/com/android/support/support-v13/21.0.0/support-v13-21.0.0.aar
+
+android.library.reference.1=/storage/emulated/0/.aide/android-support/m2repository/com/android/support/support-v13/21.0.0/support-v13-21.0.0.aar
